<resources>
    <string name="app_name">AtypicalTrails</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_firstLast">First and last name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_ConfirmPassword">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_ãddress">Address</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_logIn">Log in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_matchPasswords">Passwords don\'t match</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="info_profCreatedTrails">Created</string>
    <string name="info_profExecutedTrails">Executed</string>
    <string name="info_profTotalHours">Total Hours</string>
</resources>
